// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`admin_console/progress_bar status legend match snapshot 1`] = `
<div
  className="ProgressBar"
>
  <FormattedMessage
    defaultMessage="Import in Progress"
    id="admin.general.importInProgress"
  />
  <svg
    fill="none"
    height="4"
    viewBox="0 0 50 4"
    width="50"
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      fill="#3D3C40"
      fillOpacity="0.16"
      height="4"
      rx="2"
      width="50"
    />
    <rect
      fill="#166DE0"
      height="4"
      rx="2"
      width="10"
    />
  </svg>
  <span>
    10%
  </span>
</div>
`;

exports[`admin_console/progress_bar status legend shows failed 1`] = `
<ProgressBar
  percentage={10}
>
  <div
    className="ProgressBar"
  >
    <FormattedMessage
      defaultMessage="Import in Progress"
      id="admin.general.importInProgress"
    >
      <span>
        Import in Progress
      </span>
    </FormattedMessage>
    <svg
      fill="none"
      height="4"
      viewBox="0 0 50 4"
      width="50"
      xmlns="http://www.w3.org/2000/svg"
    >
      <rect
        fill="#3D3C40"
        fillOpacity="0.16"
        height="4"
        rx="2"
        width="50"
      />
      <rect
        fill="#166DE0"
        height="4"
        rx="2"
        width="10"
      />
    </svg>
    <span>
      10%
    </span>
  </div>
</ProgressBar>
`;
